Change QR code to use HTTPS

--- a/growlforandroid/index.html
+++ b/growlforandroid/index.html
@@ -33,7 +33,7 @@
 
 
 
-<a href="https://play.google.com/store/apps/details?id=com.growlforandroid.client"><img src="http://chart.apis.google.com/chart?chs=250x250&cht=qr&chl=market://search%3fq%3dpname:com.growlforandroid.client&choe=UTF-8&image.png" align="right" alt="Google Play Store QR Code"/></a>
+<a href="https://play.google.com/store/apps/details?id=com.growlforandroid.client"><img src="https://chart.apis.google.com/chart?chs=250x250&cht=qr&chl=market://search%3fq%3dpname:com.growlforandroid.client&choe=UTF-8&image.png" align="right" alt="Google Play Store QR Code"/></a>
 
 <p>A Growl client/server designed for Android devices, to allow them to receive Growl notifications from other devices on the same network.</p>
 
